--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 18
 
       - name: 🤖 npm install
-        run: npm install
+        run: npm install -g
 
       - name: 🧪 Run tests and count lines
         run: npm test
