--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,8 @@ jobs:
       - name: 🤖 npm install
         run: npm install -g
 
+      - run: npm run build
+
       - name: 🧪 Run tests and count lines
         run: npm test
 
