--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "simple_tests",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "jest": "^29.2.2"
+  },
   "main": "src/cloneArray.js",
   "type": "module",
   "scripts": {
@@ -13,7 +15,6 @@
   "description": "",
   "devDependencies": {
     "cloc": "^2.10.0",
-    "jest": "^29.2.2",
     "node-fetch": "^3.2.10",
     "node-html-parser": "^6.1.1"
   }
