--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "src/cloneArray.js",
   "type": "module",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
