--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: 🧪 Run tests and count lines
-        run: npm test --coverage
+        run: npm test
 
       - name: 🎉 Send metrics to server
         run: node metrics.js
