fixed actions and package.json

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,8 +25,17 @@ jobs:
       - name: 🤖 npm install
         run: npm install
 
+      - name: Install CLOC
+        run: sudo apt install cloc
+        
       - name: 🧪 Run tests and count lines
         run: npm test
+
+      - name: Create codeLines file
+        run: cloc src --report-file=coverage/codeLines
+
+      - name: Create testLines file
+        run: cloc test --report-file=coverage/testLines
 
       - name: 🎉 Send metrics to server
         run: node metrics.js
